--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Vyacheslav Fedorov | Personal Page</title>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="style.css">
-		<link rel="icon" type="image/jpeg" href="fuodorov.jpg" />
+		<link rel="icon" type="image/jpeg" href="icon.png" />
 	</head>
 	<body>
 		<div class="content">
