--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,8 @@
 		<div class="content">
 			<div class="intro">
 				<span><a href="https://github.com/fuodorov/kenv">KENV</a></span><br>
-				<span>The solver of Kapchinsky-Vladimirsky envelope equation for electron beam with space charge</span>
+				<span>The solver of Kapchinsky-Vladimirsky envelope equation for electron beam with space charge</span><br>
+				<span><a href="https://github.com/fuodorov/kenv">GitHub</a> | <a href="https://pypi.org/project/kenv/0.1.4/">PyPI</a> | <a href="https://github.com/fuodorov/kenv/wiki">Wiki</a></span>
 			</div>
 			<table>
 				<tr>
