--- a/teach_in.html
+++ b/teach_in.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Vyacheslav Fedorov | Teach-In</title>
+		<title>Vyacheslav Fedorov | Teach-in</title>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="style.css">
 		<link rel="icon" type="image/jpeg" href="icon.png" />
