--- a/teach_in.html
+++ b/teach_in.html
@@ -17,7 +17,7 @@
 				<span><a href="https://ru.overleaf.com">LaTex</a></span>
 				<br><span>LaTeX is not very easy to learn, but makes life easier for anyone who has to complete term papers and dissertations.</span>
 				<br>
-				<span><a href="docs/tex/latex">Practice</a>
+				<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/docs/tex/latex">Practice</a>
 				| <a href="http://ctan.altspu.ru/macros/latex/contrib/beamer/doc/beameruserguide.pdf">Beamer</a>
 				| <a href="http://tug.ctan.org/info/symbols/comprehensive/symbols-a4.pdf">Symbols</a>
 			  | <a href="http://wch.github.io/latexsheet/latexsheet.pdf">Cheat Sheet</a>
