--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 				<br>
 				<span>The solver of Kapchinsky-Vladimirsky envelope equation for electron beam with space charge</span>
 				<br>
-				<span><a href="https://github.com/fuodorov/kenv">GitHub</a> | <a href="https://pypi.org/project/kenv/0.1.4/">PyPI</a> | <a href="https://github.com/fuodorov/kenv/wiki">Wiki</a></span>
+				<span><a href="https://github.com/fuodorov/kenv">GitHub</a> | <a href="https://pypi.org/project/kenv/0.1.4/">PyPI</a> | <a href="https://github.com/fuodorov/kenv/wiki">Wiki</a> | <a href="https://anaconda.org/petrenko/kenv_tutorial/notebook">Tutorial</a></span>
 				<br><br>
 			</div>
 			<table>
