--- a/teach_in.html
+++ b/teach_in.html
@@ -17,8 +17,8 @@
 				<br>
 				<br>
 				<span><a href="https://github.com/fuodorov/python">Python</a></span><br>
-				<span>Python is a great general-purpose programming language on its own, but with the help of a few popular libraries (numpy, scipy, matplotlib and holoviews) it becomes a powerful environment for scientific computing.</span><br>
-				<span><a href="https://github.com/fuodorov/python">GitHub</a> | <a href="./python/tutorial/tutorial.html">Tutorial</a> </span>
+				<span>Python is a great general-purpose programming language on its own, but with the help of a few popular libraries it becomes a powerful environment for scientific computing.</span><br>
+				<span><a href="https://github.com/fuodorov/python">GitHub</a> | <a href="https://github.com/fuodorov/python/blob/master/tutorial/tutorial.ipynb">Tutorial</a> </span>
 				<br>
 				<br>
 				<span><a href="https://github.com/fuodorov/latex">LaTex</a></span>
