--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 				<br>
 				<span>Relativistic Difference Scheme Particle-In-Cell code.</span>
 				<br>
-				<span><a href="https://github.com/fuodorov/redpic">GitHub</a> | PyPI | <a href="https://github.com/fuodorov/redpic/wiki">Wiki</a> | Manual | Know-How </span>
+				<span><a href="https://github.com/fuodorov/redpic">GitHub</a> | PyPI | <a href="https://github.com/fuodorov/redpic/wiki">Wiki</a> | Manual | <a href="https://github.com/fuodorov/redpic/tree/master/notebooks">Know-How</a> </span>
 				<br><br>
 
 				<span><a href="https://github.com/fuodorov/kenv">KENV</a></span>
