--- a/papers.html
+++ b/papers.html
@@ -14,17 +14,17 @@
 				<span><i>D. Nikiforov, M. Blinov, V. Fedorov, A. Petrenko et al.</i></span><br>
 				<span>Particles and Nuclei</span><br>
 				<br>
-				<span><a href="docs/pdf/publications/ir.pdf">Study of the possibility of creating a horizon sensor for the orientation system
+				<span><a href="docs/pdf/papers/ir.pdf">Study of the possibility of creating a horizon sensor for the orientation system
 small spacecraft based on IR temperature sensor *</a></span><br>
 				<span><i>V. Fedorov, M. Zadorozhny</i></span><br>
 				<span>Labwork in NSU, 2018</span><br>
 				<br>
-				<span><a href="docs/pdf/publications/ignition_parameters.pdf">Experimental study of high-frequency ignition parameters
+				<span><a href="docs/pdf/papers/ignition_parameters.pdf">Experimental study of high-frequency ignition parameters
 glow discharge *</a></span><br>
 				<span><i>V. Fedorov, A. Yatsky</i></span><br>
 				<span>Labwork in NSU, 2017</span><br>
 				<br>
-				<span><a href="docs/pdf/publications/statistical_processing.pdf">Statistical processing of measurement results *</a></span><br>
+				<span><a href="docs/pdf/papers/statistical_processing.pdf">Statistical processing of measurement results *</a></span><br>
 				<span><i>V. Fedorov, O. Bragin, L. Prokopyeva</i></span><br>
 				<span>Labwork in NSU, 2016</span><br>
 				<br>
