--- a/teach_in.html
+++ b/teach_in.html
@@ -11,19 +11,34 @@
 		<div class="content">
 			<div class="intro">
 				<span><a href="https://github.com/fuodorov/python">Python</a></span><br>
-				<span>Python is a great general-purpose programming language on its own, but with the help of a few popular libraries it becomes a powerful environment for scientific computing.</span><br>
+				<span>Python is a great general-purpose programming language on its own, but with the help of a few popular libraries it becomes a powerful environment for scientific computing</span><br>
 				<span><a href="https://github.com/fuodorov/python">GitHub</a> | <a href="https://github.com/fuodorov/python/blob/master/tutorial/tutorial.ipynb">Tutorial</a> | <a href="https://github.com/fuodorov/python/blob/master/performance/performance.ipynb">Performance</a>
 				| <a href="https://github.com/fuodorov/python/blob/master/multithreading/multithreading.ipynb">Multithreading</a></span>
 				<br>
 				<br>
 				<span><a href="https://github.com/fuodorov/latex">LaTex</a></span>
-				<br><span>LaTeX is not very easy to learn, but makes life easier for anyone who has to complete term papers and dissertations.</span>
+				<br><span>LaTeX is not very easy to learn, but makes life easier for anyone who has to complete term papers and dissertations</span>
 				<br>
 				<span><a href="https://github.com/fuodorov/latex">GitHub</a>
 				| <a href="https://overleaf.com">Overleaf</a>
 				| <a href="http://tug.ctan.org/info/symbols/comprehensive/symbols-a4.pdf">Symbols</a>
 			  | <a href="http://wch.github.io/latexsheet/latexsheet.pdf">Cheat Sheet</a>
 				| <a href="https://www.geogebra.org/classic">GeoGebra</a> </span>
+				<br>
+				<br>
+				<span><a href="docs/pdf/notes/green_functions.pdf">Green Functions *</a></span>
+				<br><span>Summary of the course on Green functions at NSU</span>
+				<br>
+				<br>
+				<span><a href="docs/pdf/notes/group_theory.pdf">Group Theory *</a></span>
+				<br><span>Summary of the course on group theory at NSU.</span>
+				<br>
+				<br>
+				<span><a href="docs/pdf/notes/statistical_physics.pdf">Statistical Physics *</a></span>
+				<br><span>Summary of the course on statistical physics at NSU</span>
+				<br>
+				<br>
+				<p align="right"><b>*</b><i> in Russian</i></p>
 			</div>
 			<table>
 				<tr>
