--- a/teach.html
+++ b/teach.html
@@ -12,7 +12,10 @@
 			<div class="intro">
 				<span><a href="https://github.com/fuodorov/python">Python</a></span><br>
 				<span>Python is a great general-purpose programming language on its own, but with the help of a few popular libraries it becomes a powerful environment for scientific computing</span><br>
-				<span><a href="https://github.com/fuodorov/python">GitHub</a> | <a href="https://github.com/fuodorov/python/blob/master/tutorial/tutorial.ipynb">Tutorial</a> | <a href="https://github.com/fuodorov/python/blob/master/performance/performance.ipynb">Performance</a>
+				<span><a href="https://github.com/fuodorov/python">GitHub</a> 
+				| <a href="https://github.com/fuodorov/python/blob/master/tutorial/tutorial.ipynb">Tutorial</a>
+				| <a href="https://github.com/fuodorov/python/blob/master/tutorial/tutorial.ipynb">Testing</a> 
+				| <a href="https://github.com/fuodorov/python/blob/master/performance/performance.ipynb">Performance</a>
 				| <a href="https://github.com/fuodorov/python/blob/master/multithreading/multithreading.ipynb">Multithreading</a> 
 				| <a href="https://github.com/bokeh/bokeh-notebooks/blob/master/tutorial/00%20-%20Introduction%20and%20Setup.ipynb">Bokeh</a></span>
 				<br>
