--- a/teach.html
+++ b/teach.html
@@ -34,11 +34,11 @@
 				<br>
 				<br>
 				<span><a href="docs/pdf/notes/group_theory.pdf">Group Theory *</a></span>
-				<br><span>Summary of the course on group theory at NSU.</span>
+				<br><span>Summary of the course on group theory at NSU</span>
 				<br>
 				<br>
 				<span><a href="docs/pdf/notes/quantum_mechanics.pdf">Quantum mechanics *</a></span>
-				<br><span>Summary of the course on quantum mechanics at NSU.</span>
+				<br><span>Summary of the course on quantum mechanics at NSU</span>
 				<br>
 				<br>
 				<span><a href="docs/pdf/notes/statistical_physics.pdf">Statistical Physics *</a></span>
