--- a/teach.html
+++ b/teach.html
@@ -45,6 +45,10 @@
 				<br><span>Summary of the course on statistical physics at NSU</span>
 				<br>
 				<br>
+				<span><a href="docs/pdf/notes/mechanics.pdf">Mechanics *</a></span>
+				<br><span>Summary of the course on mechanics at NSU</span>
+				<br>
+				<br>
 				<p align="right"><b>*</b><i> in Russian</i></p>
 			</div>
 			<table>
