--- a/teach.html
+++ b/teach.html
@@ -49,6 +49,10 @@
 				<br><span>Summary of the course on mechanics at NSU</span>
 				<br>
 				<br>
+				<span><a href="docs/pdf/notes/сombat_astropractice.pdf">Combat Astropractice *</a></span>
+				<br><span>The program of the astronomical practice course for students of the Novosibirsk planetarium</span>
+				<br>
+				<br>
 				<p align="right"><b>*</b><i> in Russian</i></p>
 			</div>
 			<table>
