--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 			<div class="intro">
 				<span><a href="https://github.com/fuodorov/redpic">REDPIC</a> </span>
 				<br>
-				<span>Relativistic Difference Scheme Particle-In-Cell code.</span>
+				<span>Relativistic Difference Scheme Particle-In-Cell code</span>
 				<br>
 				<span><a href="https://github.com/fuodorov/redpic">GitHub</a> | <a href="https://pypi.org/project/redpic/">PyPI</a> | <a href="https://github.com/fuodorov/redpic/tree/master/notebooks">Know-How</a> </span>
 				<br><br>
