--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,8 @@
 					<img src="img/photo/nature/2.jpg" />
 					<img src="img/photo/nature/1.jpg" />
 				</div>
-				<br><br>
+				<br>
+				<br>
 				<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/astro">ASTRO</a></span>
 				<br>
 				<span>Stars, stars, stars...</span>
@@ -35,6 +36,17 @@
 				<div class="hovergallery">
 					<img src="img/photo/astro/2.jpg" />
 					<img src="img/photo/astro/3.jpg" />
+				</div>
+				<br>
+				<br>
+				<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/apriary">APRIARY</a></span>
+				<br>
+				<span>Honey and bees</span>
+				<br>
+				<div class="hovergallery">
+					<img src="img/photo/apriary/1.jpg" />
+					<img src="img/photo/apriary/2.jpg" />
+					<img src="img/photo/apriary/3.jpg" />
 				</div>
 				<br><br>
 				<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/christmas">CHRISTMAS</a></span>
