--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,14 @@
 	<body>
 		<div class="content">
 			<div class="intro">
+				<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/wedding">WEDDING</a> </span>
+				<br>
+				<span>Happiness and love</span>
+				<br>
+				<div class="hovergallery">
+					<img src="img/photo/wedding/1.jpg" />
+				</div>
+			  <br><br>
 				<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/folk">FOLK</a> </span>
 				<br>
 				<span>Russian traditional culture</span>
