--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 				<br>
 				<span>Relativistic Difference Scheme Particle-In-Cell code</span>
 				<br>
-				<span><a href="https://github.com/fuodorov/redpic">GitHub</a> | <a href="https://pypi.org/project/redpic/">PyPI</a> | <a href="https://github.com/fuodorov/redpic/tree/master/notebooks">Know-How</a> </span>
+				<span><a href="https://github.com/fuodorov/redpic">GitHub</a> | <a href="https://pypi.org/project/redpic/">PyPI</a> | <a href="https://github.com/fuodorov/redpic/tree/master/rednote">Know-How</a> | <a href="https://github.com/fuodorov/redpic/tree/master/redapp">App</a> </span>
 				<br><br>
 
 				<span><a href="https://github.com/fuodorov/kenv">KENV</a></span>
