--- a/teach.html
+++ b/teach.html
@@ -57,6 +57,10 @@
 				<br><span>The program of the astronomical practice course for students of the Novosibirsk planetarium</span>
 				<br>
 				<br>
+				<span><a href="docs/pdf/notes/english.pdf">English*</a></span>
+				<br><span>Summary of the course on english at TV channel culture</span>
+				<br>
+				<br>
 				<p align="right"><b>*</b><i> in Russian</i></p>
 			</div>
 			<table>
