--- a/teach.html
+++ b/teach.html
@@ -10,6 +10,14 @@
 	<body>
 		<div class="content">
 			<div class="intro">
+				<span><a href="https://github.com/fuodorov/julia">Julia</a></span>
+				<br><span>LaTeX is not very easy to learn, but makes life easier for anyone who has to complete term papers and dissertations</span>
+				<br>
+				<span><a href="https://github.com/fuodorov/julia">GitHub</a>
+				| <a href="https://github.com/fuodorov/julia/blob/master/tutorial/tutorial.ipynb">Tutorial</a>
+			  | <a href="https://juliadocs.github.io/Julia-Cheat-Sheet/">Cheat Sheet</a></span>
+				<br>
+				<br>
 				<span><a href="https://github.com/fuodorov/python">Python</a></span><br>
 				<span>Python is a great general-purpose programming language on its own, but with the help of a few popular libraries it becomes a powerful environment for scientific computing</span><br>
 				<span><a href="https://github.com/fuodorov/python">GitHub</a>
