--- a/teach.html
+++ b/teach.html
@@ -11,7 +11,7 @@
 		<div class="content">
 			<div class="intro">
 				<span><a href="https://github.com/fuodorov/julia">Julia</a></span>
-				<br><span>LaTeX is not very easy to learn, but makes life easier for anyone who has to complete term papers and dissertations</span>
+				<br><span>Julia is a fast, general purpose language that can easily integrate with libraries from numerous languages and has numerous libraries that are of interest especially to mathematically inclined people.</span>
 				<br>
 				<span><a href="https://github.com/fuodorov/julia">GitHub</a>
 				| <a href="https://github.com/fuodorov/julia/blob/master/tutorial/tutorial.ipynb">Tutorial</a>
