--- a/papers.html
+++ b/papers.html
@@ -14,6 +14,10 @@
 				<span><i>D. Nikiforov, M. Blinov, V. Fedorov, A. Petrenko et al.</i></span><br>
 				<span>Particles and Nuclei</span><br>
 				<br>
+				<span><a href="docs/pdf/papers/ebeam_dynamic.pdf">Dynamics of high-current electron beams in linear induction accelerators*</a></span><br>
+				<span><i>V. Fedorov, D. Nikiforov</i></span><br>
+				<span>Labwork in NSU, 2019</span><br>
+				<br>
 				<span><a href="docs/pdf/papers/ir.pdf">Study of the possibility of creating a horizon sensor for the orientation system
 small spacecraft based on IR temperature sensor*</a></span><br>
 				<span><i>V. Fedorov, M. Zadorozhny</i></span><br>
