--- a/papers.html
+++ b/papers.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="content">
 			<div class="intro">
-				<span><a href="http://www1.jinr.ru/Pepan_letters/panl_2020_2/13_nikiforov.pdf">Transportation of a high-current electron beam in a linear induction accelerator LIA-5*</a></span><br>
+				<span><a href="docs/pdf/papers/kv_envelope_code.pdf">Transportation of a high-current electron beam in a linear induction accelerator LIA-5*</a></span><br>
 				<span><i>D. Nikiforov, M. Blinov, V. Fedorov, A. Petrenko et al.</i></span><br>
 				<span>Particles and Nuclei</span><br>
 				<br>
