--- a/teach.html
+++ b/teach.html
@@ -37,6 +37,10 @@
 				| <a href="https://www.geogebra.org/classic">GeoGebra</a> </span>
 				<br>
 				<br>
+				<span><a href="docs/html/physical_chemistry/00_intro.html">Physical Chemistry*</a></span>
+				<br><span>Summary of the course on Physical Chemistry at ITMO</span>
+				<br>
+				<br>
 				<span><a href="docs/pdf/notes/green_functions.pdf">Green Functions*</a></span>
 				<br><span>Summary of the course on Green functions at NSU</span>
 				<br>
