--- a/projects.html
+++ b/projects.html
@@ -1,58 +1,39 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Vyacheslav Fedorov | Projects</title>
-		<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="style.css">
-		<link rel="icon" type="image/jpeg" href="icon.png" />
-	</head>
-	<body>
-		<div class="content">
-			<div class="intro">
-				<span><a href="https://github.com/fuodorov/redpic">REDPIC</a> </span>
-				<br>
-				<span>Relativistic Difference Scheme Particle-In-Cell code</span>
-				<br>
-				<span><a href="https://github.com/fuodorov/redpic">GitHub</a> | <a href="https://pypi.org/project/redpic/">PyPI</a> | <a href="https://github.com/fuodorov/redpic/tree/master/rednote">Know-How</a> | <a href="https://github.com/fuodorov/redpic/tree/master/redapp">App</a> </span>
-				<br><br>
 
-				<span><a href="https://github.com/fuodorov/kenv">KENV</a></span>
-				<br>
-				<span>The solver of Kapchinsky-Vladimirsky envelope equation for electron beam with space charge</span>
-				<br>
-				<span><a href="https://github.com/fuodorov/kenv">GitHub</a> | <a href="https://pypi.org/project/kenv/0.1.4/">PyPI</a> | <a href="https://github.com/fuodorov/kenv/wiki">Wiki</a> | <a href="https://anaconda.org/petrenko/kenv_tutorial/notebook">Tutorial</a></span>
-				<br><br>
-			</div>
-			<table>
-				<tr>
-					<td rowspan="3">
-						<img src="fuodorov.jpg" alt="Vyacheslav Fedorov" title="Vyacheslav Fedorov"/>
-					</td>
-					<td>
-						<span>Email:</span>
-					</td>
-					<td>
-						<a href="mailto:fuodorov1998@gmail.com">fuodorov1998@gmail.com</a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<span>Website:</span>
-					</td>
-					<td>
-						<a href="https://fuodorov.github.io/">fuodorov.github.io</a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<span>GitHub:</span>
-					</td>
-					<td>
-						<a href="https://github.com/fuodorov/">fuodorov</a>
-					</td>
-				</tr>
-			</table>
+<head>
+	<meta charset="utf-8">
+	<title>Vyacheslav Fedorov | Projects</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="style.css">
+	<link rel="icon" type="image/jpeg" href="icon.png" />
+</head>
+
+<body>
+	<div class="content">
+		<div class="intro">
+			<span><a href="https://github.com/fuodorov/yatube">REDPIC</a> </span>
+			<br>
+			<span>A simple site-blog for publishing posts</span>
+			<br><br>
+
+			<span><a href="https://github.com/fuodorov/redpic">REDPIC</a> </span>
+			<br>
+			<span>Relativistic Difference Scheme Particle-In-Cell code</span>
+			<br>
+			<span><a href="https://github.com/fuodorov/redpic">GitHub</a> | <a href="https://pypi.org/project/redpic/">PyPI</a> | <a href="https://github.com/fuodorov/redpic/tree/master/rednote">Know-How</a> | <a
+					href="https://github.com/fuodorov/redpic/tree/master/redapp">App</a> </span>
+			<br><br>
+
+			<span><a href="https://github.com/fuodorov/kenv">KENV</a></span>
+			<br>
+			<span>The solver of Kapchinsky-Vladimirsky envelope equation for electron beam with space charge</span>
+			<br>
+			<span><a href="https://github.com/fuodorov/kenv">GitHub</a> | <a href="https://pypi.org/project/kenv/0.1.4/">PyPI</a> | <a href="https://github.com/fuodorov/kenv/wiki">Wiki</a> | <a
+					href="https://anaconda.org/petrenko/kenv_tutorial/notebook">Tutorial</a></span>
+			<br><br>
 		</div>
-	</body>
+	</div>
+</body>
+
 </html>
