--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="content">
 		<div class="intro">
-			<span><a href="https://github.com/fuodorov/yatube">REDPIC</a> </span>
+			<span><a href="https://github.com/fuodorov/yatube">YATUBE</a> </span>
 			<br>
 			<span>A simple site-blog for publishing posts</span>
 			<br><br>
