--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 					href="https://github.com/fuodorov/redpic/tree/master/redapp">App</a> </span>
 			<br><br>
 
-			<span><a href="https://github.com/fuodorov/kenv">KENV</a></span>
+			<span><a href="https://fuodorov.github.io/kenv">KENV</a></span>
 			<br>
 			<span>The solver of Kapchinsky-Vladimirsky envelope equation for electron beam with space charge</span>
 			<br>
