--- a/projects/index.html
+++ b/projects/index.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Vyacheslav Fedorov | Projects</title>
+	<title>Projects</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./style.css">
 	<link rel="icon" type="image/jpeg" href="icon.png" />
 </head>
 
