--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Vyacheslav Fedorov | Gallery</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./style.css">
 	<link rel="icon" type="image/jpeg" href="icon.png" />
 </head>
 
@@ -17,7 +17,7 @@
 			<span>Happiness and love</span>
 			<br>
 			<div class="hovergallery">
-				<img src="img/photo/wedding/1.jpg" />
+				<img src="docs/img/photo/wedding/1.jpg" />
 			</div>
 			<br><br>
 			<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/folk">FOLK</a> </span>
@@ -25,8 +25,8 @@
 			<span>Russian traditional culture</span>
 			<br>
 			<div class="hovergallery">
-				<img src="img/photo/folk/1.jpg" />
-				<img src="img/photo/folk/3.jpg" />
+				<img src="docs/img/photo/folk/1.jpg" />
+				<img src="docs/img/photo/folk/3.jpg" />
 			</div>
 			<br><br>
 			<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/nature">NATURE</a></span>
@@ -34,8 +34,8 @@
 			<span>The nature of endless Siberia</span>
 			<br>
 			<div class="hovergallery">
-				<img src="img/photo/nature/2.jpg" />
-				<img src="img/photo/nature/1.jpg" />
+				<img src="docs/img/photo/nature/2.jpg" />
+				<img src="docs/img/photo/nature/1.jpg" />
 			</div>
 			<br>
 			<br>
@@ -44,8 +44,8 @@
 			<span>Stars, stars, stars...</span>
 			<br>
 			<div class="hovergallery">
-				<img src="img/photo/astro/2.jpg" />
-				<img src="img/photo/astro/3.jpg" />
+				<img src="docs/img/photo/astro/2.jpg" />
+				<img src="docs/img/photo/astro/3.jpg" />
 			</div>
 			<br>
 			<br>
@@ -54,9 +54,9 @@
 			<span>Honey and bees</span>
 			<br>
 			<div class="hovergallery">
-				<img src="img/photo/apriary/1.jpg" />
-				<img src="img/photo/apriary/2.jpg" />
-				<img src="img/photo/apriary/3.jpg" />
+				<img src="docs/img/photo/apriary/1.jpg" />
+				<img src="docs/img/photo/apriary/2.jpg" />
+				<img src="docs/img/photo/apriary/3.jpg" />
 			</div>
 			<br><br>
 			<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/christmas">CHRISTMAS</a></span>
@@ -64,9 +64,9 @@
 			<span>Fabulous christmas cards</span>
 			<br>
 			<div class="hovergallery">
-				<img src="img/photo/christmas/1.jpg" />
-				<img src="img/photo/christmas/2.jpg" />
-				<img src="img/photo/christmas/3.jpg" />
+				<img src="docs/img/photo/christmas/1.jpg" />
+				<img src="docs/img/photo/christmas/2.jpg" />
+				<img src="docs/img/photo/christmas/3.jpg" />
 			</div>
 			<br><br>
 		</div>
