--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Vyacheslav Fedorov | Gallery</title>
+	<title>Gallery</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="./style.css">
 	<link rel="icon" type="image/jpeg" href="icon.png" />
