--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Gallery</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="../style.css">
 	<link rel="icon" type="image/jpeg" href="icon.png" />
 </head>
 
