--- a/papers/index.html
+++ b/papers/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Publications</title>
+	<title>Papers</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,300italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="../style.css">
 	<link rel="icon" type="image/jpeg" href="icon.png" />
