--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<table>
 			<tr>
 				<td rowspan="3">
-					<img src="fuodorov.jpg" alt="Vyacheslav Fedorov" title="Vyacheslav Fedorov" />
+					<img src="docs/fuodorov.jpg" alt="Vyacheslav Fedorov" title="Vyacheslav Fedorov" />
 				</td>
 				<td>
 					<span>Email:</span>
@@ -32,10 +32,10 @@
 			</tr>
 			<tr>
 				<td>
-					<span>Website:</span>
+					<span>Telegram:</span>
 				</td>
 				<td>
-					<a href="https://fuodorov.github.io/">fuodorov.github.io</a>
+					<a href="https://t.me/fuodorov1998">fuodorov1998</a>
 				</td>
 			</tr>
 			<tr>
