--- a/gallery/index.html
+++ b/gallery/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="content">
 		<div class="intro">
-			<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/wedding">WEDDING</a> </span>
+			<span><a href="https://fuodorov.github.io/gallery/docs/img/photo/wedding">WEDDING</a> </span>
 			<br>
 			<span>Happiness and love</span>
 			<br>
@@ -20,7 +20,7 @@
 				<img src="docs/img/photo/wedding/1.jpg" />
 			</div>
 			<br><br>
-			<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/folk">FOLK</a> </span>
+			<span><a href="https://fuodorov.github.io/gallery/docs/img/photo/folk">FOLK</a> </span>
 			<br>
 			<span>Russian traditional culture</span>
 			<br>
@@ -29,7 +29,7 @@
 				<img src="docs/img/photo/folk/3.jpg" />
 			</div>
 			<br><br>
-			<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/nature">NATURE</a></span>
+			<span><a href="https://fuodorov.github.io/gallery/docs/img/photo/nature">NATURE</a></span>
 			<br>
 			<span>The nature of endless Siberia</span>
 			<br>
@@ -39,7 +39,7 @@
 			</div>
 			<br>
 			<br>
-			<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/astro">ASTRO</a></span>
+			<span><a href="https://fuodorov.github.io/gallery/docs/img/photo/astro">ASTRO</a></span>
 			<br>
 			<span>Stars, stars, stars...</span>
 			<br>
@@ -49,7 +49,7 @@
 			</div>
 			<br>
 			<br>
-			<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/apriary">APRIARY</a></span>
+			<span><a href="https://fuodorov.github.io/gallery/docs/img/photo/apriary">APRIARY</a></span>
 			<br>
 			<span>Honey and bees</span>
 			<br>
@@ -59,7 +59,7 @@
 				<img src="docs/img/photo/apriary/3.jpg" />
 			</div>
 			<br><br>
-			<span><a href="https://github.com/fuodorov/fuodorov.github.io/tree/master/img/photo/christmas">CHRISTMAS</a></span>
+			<span><a href="https://fuodorov.github.io/gallery/docs/img/photo/christmas">CHRISTMAS</a></span>
 			<br>
 			<span>Fabulous christmas cards</span>
 			<br>
