--- a/projects/index.html
+++ b/projects/index.html
@@ -12,6 +12,11 @@
 <body>
 	<div class="content">
 		<div class="intro">
+			<span><a href="https://github.com/fuodorov/yacinema">YACINEMA</a> </span>
+			<br>
+			<span>Web application online cinema</span>
+			<br><br>
+
 			<span><a href="https://github.com/fuodorov/yatube">YATUBE</a> </span>
 			<br>
 			<span>A simple site-blog for publishing posts</span>
