--- a/teach-in/index.html
+++ b/teach-in/index.html
@@ -26,6 +26,7 @@
 				| <a href="https://github.com/fuodorov/python/blob/master/tutorial/tutorial.ipynb">Tutorial</a>
 				| <a href="https://github.com/fuodorov/python/blob/master/performance/performance.ipynb">Performance</a>
 				| <a href="https://github.com/fuodorov/python/blob/master/multithreading/multithreading.ipynb">Multithreading</a>
+				| <a href="https://github.com/fuodorov/python/blob/master/async/async.ipynb">Async</a>
 				| <a href="https://github.com/bokeh/bokeh-notebooks/blob/master/tutorial/00%20-%20Introduction%20and%20Setup.ipynb">Bokeh</a></span>
 			<br>
 			<br>
