--- a/papers/index.html
+++ b/papers/index.html
@@ -12,9 +12,13 @@
 <body>
 	<div class="content">
 		<div class="intro">
+			<span><a href="https://doi.org/10.1088/1748-0221/16/11/P11024">Investigation of high current electron beam dynamics in linear induction accelerator for creation of a high-power THz radiation source</a></span><br>
+			<span><i>D. Nikiforov et al.</i></span><br>
+			<span>Journal of Instrumentation, 2021</span><br>
+			<br>
 			<span><a href="docs/kv_envelope_code.pdf">Transportation of a high-current electron beam in a linear induction accelerator LIA-5*</a></span><br>
 			<span><i>D. Nikiforov, M. Blinov, V. Fedorov, A. Petrenko et al.</i></span><br>
-			<span>Particles and Nuclei</span><br>
+			<span>Particles and Nuclei, 2020</span><br>
 			<br>
 			<span><a href="docs/ebeam_dynamics.pdf">Dynamics of high-current electron beams in linear induction accelerators*</a></span><br>
 			<span><i>V. Fedorov, D. Nikiforov</i></span><br>
