--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<span>Email:</span>
 				</td>
 				<td>
-					<a href="mailto:fuodorov1998@gmail.com">fuodorov1998@gmail.com</a>
+					<a href="mailto:slava@fuodorov.ru">slava@fuodorov.ru</a>
 				</td>
 			</tr>
 			<tr>
@@ -42,7 +42,7 @@
 					<span>Telegram:</span>
 				</td>
 				<td>
-					<a href="https://t.me/fuodorov1998">fuodorov1998</a>
+					<a href="https://t.me/slavafuodorov">slavafuodorov</a>
 				</td>
 			</tr>
 			<tr>
