--- a/projects/index.html
+++ b/projects/index.html
@@ -12,17 +12,27 @@
 <body>
 	<div class="content">
 		<div class="intro">
-			<span><a href="https://github.com/fuodorov/yacinema">YACINEMA</a> </span>
+			<span><a href="https://www.compassfsslink.org/">Compass FSS Link</a></span>
+			<br>
+			<span>Nonprofit financial services organization</span>
+			<br><br>
+			
+			<span><a href="https://galeai.co/">GALEAI</a></span>
+			<br>
+			<span>Artificially intelligent medical coding</span>
+			<br><br>
+			
+			<span><a href="https://github.com/fuodorov/yacinema">YACINEMA</a></span>
 			<br>
 			<span>Web application online cinema</span>
 			<br><br>
 
-			<span><a href="https://github.com/fuodorov/yatube">YATUBE</a> </span>
+			<span><a href="https://github.com/fuodorov/yatube">YATUBE</a></span>
 			<br>
 			<span>A simple site-blog for publishing posts</span>
 			<br><br>
 
-			<span><a href="https://github.com/fuodorov/redpic">REDPIC</a> </span>
+			<span><a href="https://github.com/fuodorov/redpic">REDPIC</a></span>
 			<br>
 			<span>Relativistic Difference Scheme Particle-In-Cell code</span>
 			<br>
