--- a/projects/index.html
+++ b/projects/index.html
@@ -12,6 +12,11 @@
 <body>
 	<div class="content">
 		<div class="intro">
+			<span><a href="https://www.narcity.com/">Narcity Daily Digest</a></span>
+			<br>
+			<span>Daily newsletters</span>
+			<br><br>
+			
 			<span><a href="https://www.compassfsslink.org/">Compass FSS Link</a></span>
 			<br>
 			<span>Nonprofit financial services organization</span>
