--- a/papers/index.html
+++ b/papers/index.html
@@ -29,6 +29,10 @@
 			<span><i>V. Fedorov, M. Zadorozhny</i></span><br>
 			<span>Labwork in NSU, 2018</span><br>
 			<br>
+			<span><a href="docs/сombat_astropractice.pdf">Combat Astropractice*</a></span><br>
+			<span><i>V. Fedorov</i></span><br>
+			<span>Practice course in Novosibirsk planetarium, 2018</span><br>
+			<br>
 			<span><a href="docs/ignition_parameters.pdf">Experimental study of high-frequency ignition parameters
 					glow discharge*</a></span><br>
 			<span><i>V. Fedorov, A. Yatsky</i></span><br>
