--- a/teach-in/index.html
+++ b/teach-in/index.html
@@ -12,15 +12,11 @@
 <body>
 	<div class="content">
 		<div class="intro">
-			<span><a href="https://github.com/fuodorov/julia">Julia</a></span>
-			<br><span>Julia is a fast, general purpose language has numerous libraries that are of interest especially to mathematically inclined people</span>
-			<br>
-			<span><a href="https://github.com/fuodorov/julia">GitHub</a>
-				| <a href="https://github.com/fuodorov/julia/blob/master/tutorial/tutorial.ipynb">Tutorial</a>
-				| <a href="https://juliadocs.github.io/Julia-Cheat-Sheet/">Cheat Sheet</a></span>
+			<span><a href="https://github.com/fuodorov/yaalgorithms">Algorithms</a></span><br>
+			<span>Solving problems in Algorithms courses</span><br>
 			<br>
 			<br>
-			<span><a href="https://github.com/fuodorov/python">Python</a></span><br>
+			<span><a href="https://github.com/fuodorov/python">Python*</a></span><br>
 			<span>Python is a great general-purpose programming language on its own, but with the help of a few popular libraries it becomes a powerful environment for scientific computing</span><br>
 			<span><a href="https://github.com/fuodorov/python">GitHub</a>
 				| <a href="https://github.com/fuodorov/python/blob/master/tutorial/tutorial.ipynb">Tutorial</a>
@@ -30,7 +26,15 @@
 				| <a href="https://github.com/bokeh/bokeh-notebooks/blob/master/tutorial/00%20-%20Introduction%20and%20Setup.ipynb">Bokeh</a></span>
 			<br>
 			<br>
-			<span><a href="https://github.com/fuodorov/latex">LaTex</a></span>
+			<span><a href="https://github.com/fuodorov/julia">Julia*</a></span>
+			<br><span>Julia is a fast, general purpose language has numerous libraries that are of interest especially to mathematically inclined people</span>
+			<br>
+			<span><a href="https://github.com/fuodorov/julia">GitHub</a>
+				| <a href="https://github.com/fuodorov/julia/blob/master/tutorial/tutorial.ipynb">Tutorial</a>
+				| <a href="https://juliadocs.github.io/Julia-Cheat-Sheet/">Cheat Sheet</a></span>
+			<br>
+			<br>
+			<span><a href="https://github.com/fuodorov/latex">LaTex*</a></span>
 			<br><span>LaTeX is not very easy to learn, but makes life easier for anyone who has to complete term papers and dissertations</span>
 			<br>
 			<span><a href="https://github.com/fuodorov/latex">GitHub</a>
