--- a/teach-in/index.html
+++ b/teach-in/index.html
@@ -26,7 +26,7 @@
 				| <a href="https://github.com/bokeh/bokeh-notebooks/blob/master/tutorial/00%20-%20Introduction%20and%20Setup.ipynb">Bokeh</a></span>
 			<br>
 			<br>
-			<span><a href="https://github.com/fuodorov/julia">Julia*</a></span>
+			<span><a href="https://github.com/fuodorov/julia">Julia</a></span>
 			<br><span>Julia is a fast, general purpose language has numerous libraries that are of interest especially to mathematically inclined people</span>
 			<br>
 			<span><a href="https://github.com/fuodorov/julia">GitHub</a>
@@ -34,7 +34,7 @@
 				| <a href="https://juliadocs.github.io/Julia-Cheat-Sheet/">Cheat Sheet</a></span>
 			<br>
 			<br>
-			<span><a href="https://github.com/fuodorov/latex">LaTex*</a></span>
+			<span><a href="https://github.com/fuodorov/latex">LaTex</a></span>
 			<br><span>LaTeX is not very easy to learn, but makes life easier for anyone who has to complete term papers and dissertations</span>
 			<br>
 			<span><a href="https://github.com/fuodorov/latex">GitHub</a>
@@ -80,7 +80,7 @@
 <!--			<br><span>Summary of the course on english at TV channel culture</span>-->
 <!--			<br>-->
 <!--			<br>-->
-			<p align="right"><b>*</b><i> in Russian</i></p>
+<!--			<p align="right"><b>*</b><i> in Russian</i></p>-->
 		</div>
 	</div>
 </body>
