--- a/papers/index.html
+++ b/papers/index.html
@@ -12,11 +12,11 @@
 <body>
 	<div class="content">
 		<div class="intro">
-			<span><a href="docs/scaling_db/scaling_db.slides.html">Database scaling*</a></span><br>
+			<span><a href="docs/scaling_db/scaling_db.slides.html">Database scaling</a></span><br>
 			<span><i>V. Fedorov, A. Kharchenko</i></span><br>
 			<span>Attestation workshop at Sibers, 2022</span><br>
 			<br>
-			<span><a href="docs/async_api/async.slides.html">Asynchronous python programming*</a></span><br>
+			<span><a href="docs/async_api/async.slides.html">Asynchronous python programming</a></span><br>
 			<span><i>V. Fedorov, A. Kharchenko</i></span><br>
 			<span>Attestation workshop at Sibers, 2021</span><br>
 			<br>
@@ -24,33 +24,32 @@
 			<span><i>D. Nikiforov et al.</i></span><br>
 			<span>Journal of Instrumentation, 2021</span><br>
 			<br>
-			<span><a href="docs/kv_envelope_code.pdf">Transportation of a high-current electron beam in a linear induction accelerator LIA-5*</a></span><br>
+			<span><a href="docs/kv_envelope_code.pdf">Transportation of a high-current electron beam in a linear induction accelerator LIA-5</a></span><br>
 			<span><i>D. Nikiforov, M. Blinov, V. Fedorov, A. Petrenko et al.</i></span><br>
 			<span>Particles and Nuclei, 2020</span><br>
 			<br>
-			<span><a href="docs/ebeam_dynamics.pdf">Dynamics of high-current electron beams in linear induction accelerators*</a></span><br>
+			<span><a href="docs/ebeam_dynamics.pdf">Dynamics of high-current electron beams in linear induction accelerators</a></span><br>
 			<span><i>V. Fedorov, D. Nikiforov</i></span><br>
 			<span>Labwork at NSU, 2019</span><br>
 			<br>
 			<span><a href="docs/ir.pdf">Study of the possibility of creating a horizon sensor for the orientation system
-					small spacecraft based on IR temperature sensor*</a></span><br>
+					small spacecraft based on IR temperature sensor</a></span><br>
 			<span><i>V. Fedorov, M. Zadorozhny</i></span><br>
 			<span>Labwork at NSU, 2018</span><br>
 			<br>
-			<span><a href="docs/сombat_astropractice.pdf">Combat Astropractice*</a></span><br>
+			<span><a href="docs/сombat_astropractice.pdf">Combat Astropractice</a></span><br>
 			<span><i>V. Fedorov</i></span><br>
 			<span>Practice course iat Novosibirsk Planetarium, 2018</span><br>
 			<br>
-			<span><a href="docs/ignition_parameters.pdf">Experimental study of high-frequency ignition parameters
-					glow discharge*</a></span><br>
+			<span><a href="docs/ignition_parameters.pdf">Experimental study of high-frequency ignition parameters glow discharge</a></span><br>
 			<span><i>V. Fedorov, A. Yatsky</i></span><br>
 			<span>Labwork at NSU, 2017</span><br>
 			<br>
-			<span><a href="docs/statistical_processing.pdf">Statistical processing of measurement results*</a></span><br>
+			<span><a href="docs/statistical_processing.pdf">Statistical processing of measurement results</a></span><br>
 			<span><i>V. Fedorov, O. Bragin, L. Prokopyeva</i></span><br>
 			<span>Labwork at NSU, 2016</span><br>
 			<br>
-			<p align="right"><b>*</b><i> in Russian</i></p>
+<!--			<p align="right"><b>*</b><i> in Russian</i></p>-->
 		</div>
 	</div>
 </body>
