--- a/teach-in/index.html
+++ b/teach-in/index.html
@@ -16,7 +16,7 @@
 			<span>Solving problems in Algorithms courses</span><br>
 			<br>
 			<br>
-			<span><a href="https://github.com/fuodorov/python">Python*</a></span><br>
+			<span><a href="https://github.com/fuodorov/python">Python</a></span><br>
 			<span>Python is a great general-purpose programming language on its own, but with the help of a few popular libraries it becomes a powerful environment for scientific computing</span><br>
 			<span><a href="https://github.com/fuodorov/python">GitHub</a>
 				| <a href="https://github.com/fuodorov/python/blob/master/tutorial/tutorial.ipynb">Tutorial</a>
