--- a/papers/index.html
+++ b/papers/index.html
@@ -12,6 +12,10 @@
 <body>
 	<div class="content">
 		<div class="intro">
+			<span><a href="docs/markov_chain/markov_chain_text_generation.html">Markov chain analysis and modelling using python</a></span><br>
+			<span><i>V. Fedorov, A. Kovalevskiy</i></span><br>
+			<span>Labwork at NSU, 2023</span><br>
+			<br>
 			<span><a href="docs/scaling_db/scaling_db.slides.html">Database scaling</a></span><br>
 			<span><i>V. Fedorov, A. Kharchenko</i></span><br>
 			<span>Attestation workshop at Sibers, 2022</span><br>
@@ -24,7 +28,7 @@
 			<span><i>D. Nikiforov et al.</i></span><br>
 			<span>Journal of Instrumentation, 2021</span><br>
 			<br>
-			<span><a href="docs/kv_envelope_code.pdf">Transportation of a high-current electron beam in a linear induction accelerator LIA-5</a></span><br>
+			<span><a href="https://link.springer.com/article/10.1134/S1547477120020156">Transportation of a high-current electron beam in a linear induction accelerator LIA-5</a></span><br>
 			<span><i>D. Nikiforov, M. Blinov, V. Fedorov, A. Petrenko et al.</i></span><br>
 			<span>Particles and Nuclei, 2020</span><br>
 			<br>
