--- a/papers/index.html
+++ b/papers/index.html
@@ -12,6 +12,10 @@
 <body>
 	<div class="content">
 		<div class="intro">
+			<span><a href="docs/critic_django/critic_django.slides.html">Critical django and good application architectures</a></span><br>
+			<span><i>V. Fedorov, A. Kharchenko</i></span><br>
+			<span>Attestation workshop at Sibers, 2023</span><br>
+			<br>
 			<span><a href="docs/markov_chain/markov_chain_text_generation.html">Markov chain analysis and modelling using python</a></span><br>
 			<span><i>V. Fedorov, A. Kovalevskiy</i></span><br>
 			<span>Labwork at NSU, 2023</span><br>
